     similar to the way syslog rotates files.
  * Added exec_after_rotate option to logger.conf, which allows a system
     command to be run after rotation.  This is primarily useful with
     rotatestrategry=rotate, to allow a limit on the number of logfiles kept
     and to ensure that the oldest log file gets deleted.

Miscellaneous 
-------------
  * Ability to use libcap to set high ToS bits when non-root
     on Linux. If configure is unable to find libcap then you
     can use --with-cap to specify the path.
  * Added maxfiles option to options section of asterisk.conf which allows you to specify
     what Asterisk should set as the maximum number of open files when it loads.
  * Added the jittertargetextra configuration option.
  * Added a new CDR module, cdr_sqlite3_custom.
  * The cdr_manager module has a [mappings] feature, like cdr_custom,
    to add fields to the manager event from the CDR variables.
  * Added a new realtime configuration module, res_config_sqlite
  * Added support for setting the CoS for VLAN traffic (802.1p).  See the sample
     configuration files for the IP channel drivers.  The new option is "cos".
     This information is also documented in doc/qos.tex, or the IP Quality of Service
     section of asterisk.pdf.
  * When originating a call using AMI or pbx_spool that fails the reason for failure
     will now be available in the failed extension using the REASON dialplan variable.
  * Added support for reading the TOUCH_MONITOR_PREFIX channel variable.
     It allows you to configure a prefix for auto-monitor recordings.
  * Added support for writing and running your dialplan in lua.  See
     configs/extensions.lua.sample for examples of how to do this.
  * A new extension pattern matching algorithm, based on a trie, is introduced
    here, that could noticeably speed up mid-sized to large dialplans.
    It is NOT used by default, as duplicating the behaviour of the old pattern